// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button danger snapshot is unchanged 1`] = `
<button
  className="ui-rounded-full ui-px-6 ui-py-2 ui-text-white ui-bg-red-700 hover:ui-bg-red-600"
  type="button"
>
  Hello World
</button>
`;

exports[`Button primary snapshot is unchanged 1`] = `
<button
  className="ui-rounded-full ui-px-6 ui-py-2 ui-text-white ui-bg-slate-800 hover:ui-bg-slate-600"
  type="button"
>
  Hello World
</button>
`;
